--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                   </div>
                   <div class="col-md-6">
                       <div class="img-box">
-                          <img src="img/rokup.jpg" alt="">
+                          <img src="/img/rokup.jpg" alt="">
                       </div>
                   </div>
               </div>
@@ -114,7 +114,7 @@
             <div class="col-sm-6- col-lg-4">
                 <div class="box">
                     <div class="img-box">
-                        <img src="img/samsung.tv.png" alt="">
+                        <img src="/img/samsung.tv.png" alt="">
                         <a href="#!" class="add_cart_btn" data-id="1"> <span>Agregar al carrito</span></a>
                     </div>
                     <div class="detail-box">
@@ -129,7 +129,7 @@
             <div class="col-sm-6- col-lg-4">
                 <div class="box">
                     <div class="img-box">
-                        <img src="img/lg.tv.png" alt="">
+                        <img src="/img/lg.tv.png" alt="">
                         <a href="#!" class="add_cart_btn" data-id="2"> <span>Agregar al carrito</span></a>
                     </div>
                     <div class="detail-box">
@@ -144,7 +144,7 @@
             <div class="col-sm-6- col-lg-4">
                 <div class="box">
                     <div class="img-box">
-                        <img src="img/sony.tv.png" alt="">
+                        <img src="/img/sony.tv.png" alt="">
                         <a href="#!" class="add_cart_btn" data-id="3"> <span>Agregar al carrito</span></a>
                     </div>
                     <div class="detail-box">
@@ -159,7 +159,7 @@
             <div class="col-sm-6- col-lg-4">
                 <div class="box">
                     <div class="img-box">
-                        <img src="img/roku.png" alt="">
+                        <img src="/img/roku.png" alt="">
                         <a href="#!" class="add_cart_btn" data-id="4"> <span>Agregar al carrito</span></a>
                     </div>
                     <div class="detail-box">
@@ -174,7 +174,7 @@
             <div class="col-sm-6- col-lg-4">
                 <div class="box">
                     <div class="img-box">
-                        <img src="img/chromecast.jpg" alt="">
+                        <img src="/img/chromecast.jpg" alt="">
                         <a href="#!" class="add_cart_btn" data-id="5"> <span>Agregar al carrito</span></a>
                     </div>
                     <div class="detail-box">
@@ -189,7 +189,7 @@
             <div class="col-sm-6- col-lg-4">
                 <div class="box">
                     <div class="img-box">
-                        <img src="img/firetv.png" alt="">
+                        <img src="/img/firetv.png" alt="">
                         <a href="#!" class="add_cart_btn" data-id="6"> <span>Agregar al carrito</span></a>
                     </div>
                     <div class="detail-box">
