--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="col-sm-6- col-lg-4">
                 <div class="box">
                     <div class="img-box">
-                        <img src="img/samsung.tv.png" alt="">
+                        <img src="img/samsungtv.png" alt="">
                         <a href="#!" class="add_cart_btn" data-id="1"> <span>Agregar al carrito</span></a>
                     </div>
                     <div class="detail-box">
@@ -129,7 +129,7 @@
             <div class="col-sm-6- col-lg-4">
                 <div class="box">
                     <div class="img-box">
-                        <img src="img/lg.tv.png" alt="">
+                        <img src="img/lgtv.png" alt="">
                         <a href="#!" class="add_cart_btn" data-id="2"> <span>Agregar al carrito</span></a>
                     </div>
                     <div class="detail-box">
@@ -144,7 +144,7 @@
             <div class="col-sm-6- col-lg-4">
                 <div class="box">
                     <div class="img-box">
-                        <img src="img/sony.tv.png" alt="">
+                        <img src="img/sonytv.png" alt="">
                         <a href="#!" class="add_cart_btn" data-id="3"> <span>Agregar al carrito</span></a>
                     </div>
                     <div class="detail-box">
