subiendo pagina gracias y payment

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="header_top">
           <div class="container-fluid">
             <nav class="navbar navbar-expand-lg custom_nav-container">
-              <a href="#" class="navbar-brand"><span>Marateca</span></a>
+              <a href="index.html" class="navbar-brand"><span>Marateca</span></a>
 
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> 
@@ -38,7 +38,7 @@
                   <ul class="navbar-nav">
                        
                         <li class="nav-item active">
-                            <a href="#" class="nav-link active">Home</a>
+                            <a href="index.html" class="nav-link active">Home</a>
                        </li>
 
                        <li class="nav-item">
@@ -71,7 +71,7 @@
     </div>
          <p class="precioTotal">Total: 
               <span id="precioTotal">0</span></p>
-     <a href="#!" class="comprar btn btn-primary">Comprar</a>
+     <a href="payment.html" class="comprar btn btn-primary">Comprar</a>
    </div>
 
      <!-- End Carrito Resumen -->
