--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                        </li>
 
                        <li class="nav-item">
-                           <a href="#" class="nav-link">Productos</a>
+                           <a href="#product_section" class="nav-link">Productos</a>
                        </li>
 
                        <li class="nav-item">
@@ -104,7 +104,7 @@
 
 <!-- Product section start -->
 
-<section class="product_section layout_padding">
+<section class="product_section layout_padding" id="product_section">
     <div class="container">
         <div class="heading_container heading_center">
             <h2>Conoce nuestros productos</h2>
