--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                        </li>
 
                        <li class="nav-item">
-                           <a href="#" class="nav-link">Nosotros</a>
+                           <a href="#product_section" class="nav-link">Productos</a>
                        </li>
 
                        <li class="nav-item">
-                           <a href="#product_section" class="nav-link">Productos</a>
+                        <a href="#" class="nav-link">Nosotros</a>
                        </li>
 
                        <li class="nav-item">
@@ -86,7 +86,7 @@
                           <h1>Bienvenido a Marateca</h1>
                           <p>Gadgets y productos tecnologícos con las mejores <br> marcas. 
                               Descubre nuestras ofertas por fin de año.</p>
-                          <a href="">Compra ahora</a>
+                          <a href="#product_section">Compra ahora</a>
                       </div>
                   </div>
                   <div class="col-md-6">
