--- a/payment.html
+++ b/payment.html
@@ -37,21 +37,21 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav">
                        
-                        <li class="nav-item active">
-                            <a href="index.html" class="nav-link active">Home</a>
-                       </li>
+                    <li class="nav-item active">
+                        <a href="index.html" class="nav-link active">Home</a>
+                   </li>
 
-                       <li class="nav-item">
-                           <a href="#" class="nav-link">Nosotros</a>
-                       </li>
+                   <li class="nav-item">
+                       <a href="#product_section" class="nav-link">Productos</a>
+                   </li>
 
-                       <li class="nav-item">
-                           <a href="#" class="nav-link">Productos</a>
-                       </li>
+                   <li class="nav-item">
+                    <a href="#" class="nav-link">Nosotros</a>
+                   </li>
 
-                       <li class="nav-item">
-                           <a href="#" class="nav-link">Contacto</a>
-                      </li>
+                   <li class="nav-item">
+                       <a href="#" class="nav-link">Contacto</a>
+                  </li>
 
                    </ul>
              </div>
