redireccion home en pagina de gracias

--- a/gracias.html
+++ b/gracias.html
@@ -68,7 +68,7 @@
             <h3>¡Gracias por comprar en Marateca!</h3>
             <p>¡El pago se realizó de manera exitosa!</p>
             <p>Te contactaremos pronto</p>
-            <a href="/index.html">Ver más productos</a>
+            <a href="index.html">Ver más productos</a>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/main.js"></script>
