--- a/gracias.html
+++ b/gracias.html
@@ -66,7 +66,8 @@
             <p>Te contactaremos pronto</p>
             <a href="index.html">Ver más productos</a>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="js/main.js"></script>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="undefined" crossorigin="anonymous"></script>
+            <script src="js/main.js"></script>
   </body>
 </html>
