interaccion con el icon carrito

--- a/payment.html
+++ b/payment.html
@@ -47,8 +47,16 @@
                            <a href="#product_section" class="nav-link">Productos</a>
                        </li>
 
+                       <li class="nav-item">
+                        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                       </li>          
+
                     </ul>
              </div>
+
+            
+
+
 
              
              </div>
