--- a/gracias.html
+++ b/gracias.html
@@ -47,6 +47,10 @@
                            <a href="#product_section" class="nav-link">Productos</a>
                        </li>
 
+                       <li class="nav-item">
+                        <i class="fas fa-shopping-cart" aria-hidden="true"></i>
+                       </li>   
+
                     </ul>
              </div>
 
