--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <!-- Fontawesome cdn  -->
 
-      <link rel="stylesheet" href="/css/all.min.css"/>
+      <link rel="stylesheet" href="css/all.min.css"/>
 
 
     <!-- Main CSS -->
