correciÃon de header

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
       <!-- Start Carrito Resumen -->
 
 <div class="carritoInner">
-    <i class="fas fa-times fa-1x action-toggle-cart"></i>
+    <div class="deleteWindow">
+    <i class="fas fa-times action-toggle-cart"></i>
+    </div>
     <div id="carrito-resumen">
         
     </div>
