--- a/payment.html
+++ b/payment.html
@@ -114,7 +114,7 @@
                     </div>
                     <div class="col-12">
                         <div class="d-flex flex-column px-md-5 px-4 mb-4"> <span>Nombre completo</span>
-                            <div class="inputWithIcon"> <input name="name" class="form-control text-uppercase" type="text" value="Gabriel Rodríguez The Big Daddy"> <span class="far fa-user"></span> </div>
+                            <div class="inputWithIcon"> <input name="name" class="form-control text-uppercase" type="text" value="Dimitri Yarmolenko"> <span class="far fa-user"></span> </div>
                         </div>
                     </div>
                     <div class="col-12 px-md-5 px-4 mt-3">
@@ -124,6 +124,68 @@
             </form>
         </div>
     </div>
+
+    <!-- Footer section start -->
+
+<section class="info_section">
+  <div class="container">
+      <div class="row">
+          <div class="col-md-3">
+              <div class="info_contact">
+                  <h5> <a href="#!" class="navbar-brand"> <span> Marateca World</span></a></h5>
+                  <p> <i class="fa fa-map-marker" aria-hidden="true">Dirección</i></p>
+                  <p> <i class="fa fa-phone" aria-hidden="true">+51 999-555-666</i></p>
+                  <p> <i class="fa fa-envelope" aria-hidden="true">contact@marateca.com</i></p>
+              </div>
+          </div>
+          <div class="col-md-3">
+              <div class="info_info">
+                  <h5 class="information">Información</h5>
+                  <p>La mejor tienda de la bolita del mundo. Entregas rápidas, atención de calidad, productos de primera. 
+                    Somos Marateca, desde la tierra del sol amado.</p>
+              </div>
+          </div>
+
+          <div class="col-md-2 ms-5">
+              <div class="info_links">
+                  <h5>Menú</h5>
+                  <ul>
+                      <li> <a href="#!"> Home </a></li>
+                      <li> <a href="#!"> Productos </a></li>
+                  </ul>
+              </div>
+          </div>
+
+          <div class="col-md-3">
+              <div class="info_message">
+                  <h5>Agradecimientos</h5>
+                  <p>Gracias a Coderhouse, a mi tutora Diana y al profe Conrado. Cracks.
+                     El camino es largo, pero de ladrillos se construye un imperio. 
+                  </p>
+
+                  <div class="social_box">
+                    <a href="#!"> <i class="fab fa-facebook" aria-hidden="true"></i></a>
+                    <a href="#!"> <i class="fab fa-instagram" aria-hidden="true"></i></a>
+                    <a href="#!"> <i class="fab fa-youtube" aria-hidden="true"></i></a>
+                    <a href="#!"> <i class="fab fa-twitter" aria-hidden="true"></i></a>
+                </div>
+              </div>
+          </div>
+
+
+      </div>   
+  </div>
+</section>
+
+<!-- Footer section End -->
+
+<!-- Start Footer bottom -->
+<footer class="footer_section">
+  <div class="container"></div>
+  <p>&copy; 2021 Todos los derechos reservados por <a href="#!"> Gabriel Rodríguez </a></p>
+</footer>
+
+<!-- End Footer bottom -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="undefined" crossorigin="anonymous"></script>
